# reversi

./: Board.cpp  Board.h  CMakeLists.txt  DeafultLogic.cpp  DeafultLogic.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  OnlinePlayer.cpp  OnlinePlayer.h  Player.cpp  Player.h  README.md  clientConfig.txt  main.cpp  makefile
include/: AIPlayer.h  Board.h  Client.h  ConsolePrinter.h  DeafultLogic.h  Game.h  GameLogic.h  GameMode.h  HumanPlayer.h  LocalPlayer.h  OnlinePlayer.h  Player.h  Printer.h  RemotePlayer.h
src/: AIPlayer.cpp  Board.cpp  Client.cpp  ConsolePrinter.cpp  DeafultLogic.cpp  Game.cpp  GameLogic.cpp  GameMode.cpp  HumanPlayer.cpp  LocalPlayer.cpp  OnlinePlayer.cpp  Player.cpp  RemotePlayer.cpp
test/: board_test.cpp  gameLogic_test.cpp  game_test.cpp  gtest_main.cpp  humanPlayer_test.cpp  player_test.cpp
